# fin-tools

./: .gitignore  README.md  hello.py  pyproject.toml
.clinerules/: documentation-update.md
alert_utils/: console_logger.py  sc_alert.py  sound_alert.py  voice_alert.py  wechat_alert.py
br-auto/: br_auto.py  br_auto_docs.md  br_auto_refactored.py  br_auto_v1.py  br_auto_v2.py  requirements.txt
web3_utils/: __init__.py  test_web3_manager.py  web3_manager.py
