[project]
name = "fin-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "tweepy>=4.15.0",
    "web3>=6.0.0",
    "websocket-client>=1.5.1",
]
